toolkit/themes/windows/global/xulscrollbars.css
@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
@namespace html url("http://www.w3.org/1999/xhtml"); 



scrollbar {
  -moz-appearance: scrollbar-horizontal;
  -moz-binding: url("chrome://global/content/bindings/scrollbar.xml#scrollbar");
  cursor: default;
}

@media all and (-moz-overlay-scrollbars) {
  scrollbar[root="true"] {
    position: relative;
    z-index: 2147483647; 
  }

  scrollbar:not([active="true"]),
  scrollbar[disabled="true"] {
    visibility: hidden;
  }
}

scrollbar[orient="vertical"] {
  -moz-appearance: scrollbar-vertical;
}


slider {
  -moz-appearance: scrollbartrack-horizontal;
}

slider[orient="vertical"] {
  -moz-appearance: scrollbartrack-vertical;
}



thumb[orient="vertical"] {
  -moz-appearance: scrollbarthumb-vertical;
  min-height: 8px;
}

thumb[orient="horizontal"] {
  -moz-appearance: scrollbarthumb-horizontal;
  min-width: 8px;
}



scrollbarbutton {
  min-width: 16px;
  min-height: 16px;
}



scrollcorner { 
  
  -moz-binding: url(chrome://global/content/bindings/scrollbar.xml#scrollbar-base);
  width: 16px;
  cursor: default;
  background-color: -moz-Dialog;
}



scrollbarbutton[type="increment"] {
  -moz-appearance: scrollbarbutton-right;
}

scrollbar[orient="vertical"] > scrollbarbutton[type="increment"] {
  -moz-appearance: scrollbarbutton-down;
}



scrollbarbutton[type="decrement"] {
  -moz-appearance: scrollbarbutton-left;
}

scrollbar[orient="vertical"] > scrollbarbutton[type="decrement"] {
  -moz-appearance: scrollbarbutton-up;
}

