Bug 1432950 - Remove the scrollbar-base binding to prevent XBL JS from running on scrollbars in content;r=dao,smaug
The events that get silenced here are already covered for native anonymous content
by IsEventStoppedFromAnonymousScrollbar.

In trees, where <xul:scrollbar> and <xul:scrollcorner> are part of the DOM, copy the
handlers over into attributes on each instance.

MozReview-Commit-ID: Huk5nFC7Qua

UltraBlame original commit: 7080e442652d1a3725b68f7ce36348360276aa73

--- a/toolkit/themes/windows/global/xulscrollbars.css
+++ b/toolkit/themes/windows/global/xulscrollbars.css
@@ -65,7 +65,6 @@ scrollbarbutton {
 
 scrollcorner { 
   
-  -moz-binding: url(chrome://global/content/bindings/scrollbar.xml#scrollbar-base);
   width: 16px;
   cursor: default;
   background-color: -moz-Dialog;
